Fix showing scrollbars on Safari

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   background: var(--bg-color);
   color: var(--text-color);
   font-family: sans-serif;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .dashboard {
